--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
          border:1px solid #000;
          margin=20px;
          color:darkgoldenrod;
-         position:fixed;
+         position: sticky;
          width:100%;
          background:rgba(255,255,255,0.9);
          
@@ -22,7 +22,7 @@
          width:50px;
          height:90px;
          display:block;
-         background: black;
+         background: greenyellow;
          
      }
      .Address>input{
