--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,10 @@
      }
      body>main>section>h2
      {
-         border:1px solid #000;
-         margin=20px;
-         color:darkgoldenrod;
-         position: sticky;
+         border: 1px solid #000;
+         margin: 20px;
+         color: darkgoldenrod;
+         position: relative;
          width:100%;
          background:rgba(255,255,255,0.9);
          
