adding background color

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,8 @@
          font-family: 'Baloo Tammudu';
          color:aliceblue;
      }
+
+     .rect{
+       background-color: gray;
+
+     }
