change in background color of division rect

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@
      }
 
      .rect{
-       background-color: gray;
+       background-color: green;
+       width: 60%;
+       margin-left: 20%;
 
      }
